--- a/environment.yml
+++ b/environment.yml
@@ -2,136 +2,134 @@ name: orca
 channels:
   - defaults
 dependencies:
-  - archspec=0.2.1=pyhd3eb1b0_0
-  - boltons=23.0.0=py312hca03da5_0
-  - boost-cpp=1.82.0=h48ca7d4_2
-  - brotli-python=1.0.9=py312h313beb8_7
-  - bzip2=1.0.8=h620ffc9_4
-  - c-ares=1.19.1=h80987f9_0
-  - ca-certificates=2023.12.12=hca03da5_0
-  - cairo=1.16.0=h302bd0f_5
-  - certifi=2024.2.2=py312hca03da5_0
-  - cffi=1.16.0=py312h80987f9_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - conda=24.1.2=py312hca03da5_0
-  - conda-content-trust=0.2.0=py312hca03da5_0
-  - conda-libmamba-solver=23.12.0=pyhd3eb1b0_1
-  - conda-package-handling=2.2.0=py312hca03da5_0
-  - conda-package-streaming=0.9.0=py312hca03da5_0
-  - cryptography=41.0.7=py312hd4332d6_0
-  - distro=1.8.0=py312hca03da5_0
-  - expat=2.5.0=h313beb8_0
-  - fmt=9.1.0=h48ca7d4_0
-  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
-  - fontconfig=2.14.1=hee714a5_2
-  - fonts-anaconda=1=h8fa9717_0
-  - fonts-conda-ecosystem=1=hd3eb1b0_0
-  - freetype=2.12.1=h1192e45_0
-  - fribidi=1.0.10=h1a28f6b_0
-  - gdk-pixbuf=2.42.10=h80987f9_0
-  - gettext=0.21.0=h13f89a0_1
-  - giflib=5.2.1=h80987f9_3
-  - glib=2.78.4=h313beb8_0
-  - glib-tools=2.78.4=h313beb8_0
-  - graphite2=1.3.14=hc377ac9_1
-  - graphviz=2.50.0=hf331ead_1
-  - gts=0.7.6=hde733a8_3
-  - harfbuzz=4.3.0=he9eebac_2
-  - icu=73.1=h313beb8_0
-  - idna=3.4=py312hca03da5_0
-  - jpeg=9e=h80987f9_1
-  - jsonpatch=1.32=pyhd3eb1b0_0
-  - jsonpointer=2.1=pyhd3eb1b0_0
-  - krb5=1.20.1=hf3e1bf2_1
-  - lcms2=2.12=hba8e193_0
-  - lerc=3.0=hc377ac9_0
-  - libarchive=3.6.2=h62fee54_2
-  - libboost=1.82.0=h0bc93f9_2
-  - libcurl=8.5.0=h3e2b118_0
-  - libcxx=14.0.6=h848a8c0_0
-  - libdeflate=1.17=h80987f9_1
-  - libedit=3.1.20230828=h80987f9_0
-  - libev=4.33=h1a28f6b_1
-  - libffi=3.4.4=hca03da5_0
-  - libgd=2.3.3=h313beb8_3
-  - libglib=2.78.4=h0a96307_0
-  - libiconv=1.16=h1a28f6b_2
-  - libmamba=1.5.3=h15e39b3_0
-  - libmambapy=1.5.3=py312h1c5506f_0
-  - libnghttp2=1.57.0=h62f6fdd_0
-  - libpng=1.6.39=h80987f9_0
-  - librsvg=2.54.4=hb3bd4c3_3
-  - libsolv=0.7.24=h514c7bf_0
-  - libssh2=1.10.0=h02f6b3c_2
-  - libtiff=4.5.1=h313beb8_0
-  - libtool=2.4.6=h313beb8_1009
-  - libwebp=1.2.4=ha3663a8_1
-  - libwebp-base=1.2.4=h80987f9_1
-  - libxml2=2.10.4=h0dcf63f_1
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - lz4-c=1.9.4=h313beb8_0
-  - menuinst=2.0.2=py312hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - nspr=4.35=h313beb8_0
-  - nss=3.89.1=h313beb8_0
-  - openjpeg=2.3.0=h7a6adac_2
-  - openssl=3.0.13=h1a28f6b_0
-  - packaging=23.1=py312hca03da5_0
-  - pango=1.50.7=h7271ec9_0
-  - pcre2=10.42=hb066dcc_0
-  - pip=23.3.1=py312hca03da5_0
-  - pixman=0.40.0=h1a28f6b_0
-  - platformdirs=3.10.0=py312hca03da5_0
-  - pluggy=1.0.0=py312hca03da5_1
-  - poppler=22.12.0=h52f4003_3
-  - poppler-data=0.4.11=hca03da5_1
-  - pybind11-abi=4=hd3eb1b0_1
-  - pycosat=0.6.6=py312h80987f9_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygraphviz=1.9=py312h80987f9_1
-  - pysocks=1.7.1=py312hca03da5_0
-  - python=3.12.1=h99e199e_0
-  - python.app=3=py312h80987f9_0
-  - readline=8.2=h1a28f6b_0
-  - reproc=14.2.4=hc377ac9_1
-  - reproc-cpp=14.2.4=hc377ac9_1
-  - requests=2.31.0=py312hca03da5_1
-  - ruamel.yaml=0.17.21=py312h80987f9_0
-  - setuptools=68.2.2=py312hca03da5_0
-  - sqlite=3.41.2=h80987f9_0
-  - tk=8.6.12=hb8d0fd4_0
-  - tqdm=4.65.0=py312h989b03a_0
-  - truststore=0.8.0=py312hca03da5_0
-  - tzdata=2023d=h04d1e81_0
-  - urllib3=2.1.0=py312hca03da5_1
-  - wheel=0.41.2=py312hca03da5_0
-  - xz=5.4.5=h80987f9_0
-  - yaml-cpp=0.8.0=h313beb8_0
-  - zlib=1.2.13=h5a0b063_0
-  - zstandard=0.19.0=py312h80987f9_0
-  - zstd=1.5.5=hd90d995_0
+  - archspec
+  - boost-cpp
+  - brotli-python
+  - bzip2
+  - c-ares
+  - ca-certificates
+  - cairo
+  - certifi
+  - cffi
+  - charset-normalizer
+  - conda
+  - conda-content-trust
+  - conda-libmamba-solver
+  - conda-package-handling
+  - conda-package-streaming
+  - cryptography
+  - distro
+  - expat
+  - fmt
+  - font-ttf-dejavu-sans-mono
+  - font-ttf-inconsolata
+  - font-ttf-source-code-pro
+  - font-ttf-ubuntu
+  - fontconfig
+  - fonts-anaconda
+  - fonts-conda-ecosystem
+  - freetype
+  - fribidi
+  - gdk-pixbuf
+  - gettext
+  - giflib
+  - glib
+  - glib-tools
+  - graphite2
+  - graphviz
+  - gts
+  - harfbuzz
+  - icu
+  - idna
+  - jpeg
+  - jsonpatch
+  - jsonpointer
+  - krb5
+  - lcms2
+  - lerc
+  - libarchive
+  - libboost
+  - libcurl
+  - libcxx
+  - libdeflate
+  - libedit
+  - libev
+  - libffi
+  - libgd
+  - libglib
+  - libiconv
+  - libmamba
+  - libmambapy
+  - libnghttp2
+  - libpng
+  - librsvg
+  - libsolv
+  - libssh2
+  - libtiff
+  - libtool
+  - libwebp
+  - libwebp-base
+  - libxml2
+  - llvm-openmp
+  - lz4-c
+  - menuinst
+  - ncurses
+  - nspr
+  - nss
+  - openjpeg
+  - openssl
+  - packaging
+  - pango
+  - pcre2
+  - pip
+  - pixman
+  - platformdirs
+  - pluggy
+  - poppler
+  - poppler-data
+  - pybind11-abi
+  - pycosat
+  - pycparser
+  - pygraphviz
+  - pysocks
+  - python
+  - readline
+  - reproc
+  - reproc-cpp
+  - requests
+  - ruamel.yaml
+  - setuptools
+  - sqlite
+  - tk
+  - tqdm
+  - truststore
+  - tzdata
+  - urllib3
+  - wheel
+  - xz
+  - yaml-cpp
+  - zlib
+  - zstandard
+  - zstd
   - pip:
-      - absl-py==2.1.0
-      - annotated-types==0.6.0
-      - anyio==4.3.0
-      - astunparse==1.6.3
-      - gast==0.5.4
-      - h11==0.14.0
-      - httpcore==1.0.4
-      - httpx==0.27.0
-      - hunter==3.6.1
-      - manhole==1.8.0
-      - networkx==3.2.1
-      - numpy==1.26.4
-      - openai==1.13.3
-      - pydantic==2.6.3
-      - pydantic-core==2.16.3
-      - python-dotenv==1.0.1
-      - python-graphs==1.2.3
-      - six==1.16.0
-      - sniffio==1.3.1
-      - tree-sitter==0.20.4
-      - typing-extensions==4.10.0
+      - absl-py
+      - annotated-types
+      - anyio
+      - astunparse
+      - gast
+      - h11
+      - httpcore
+      - httpx
+      - hunter
+      - manhole
+      - networkx
+      - numpy
+      - openai
+      - pydantic
+      - pydantic-core
+      - python-dotenv
+      - python-graphs
+      - six
+      - sniffio
+      - tree-sitter
+      - typing-extensions
